Fixed app alignment issues

--- a/src/footer/Footer.scss
+++ b/src/footer/Footer.scss
@@ -10,21 +10,22 @@
 	justify-content: flex-start;
 	align-items: stretch;
 	padding: 2em 5em;
+	padding: 1em;
 	background-image: linear-gradient(180deg, #00C6B1 0%, #227C98 100%);
 	background: linear-gradient(220deg, rgba(83, 200, 239, 0.8) 0%, rgba(81, 106, 204, 0.8) 96%);
 
 	.footerSections {
 		flex: 1 1;
-		min-width: 420px;
 		display: flex;
 		flex-direction: column;
 		flex-wrap: nowrap;
 		align-items: flex-start;
-		padding: 1em 0 1em 1em;
+		padding: 0em 0 1em 1em;
 		gap: 1em;
 		font-size: 1.25em;
-		border-left: 2px solid #272727;
+		border-left: 2px solid #3c96c4;
 		color: #333333;
+		text-align: left;
 
 		.footerSubHeading {
 			margin-bottom: 0.5em;
@@ -33,6 +34,14 @@
 			font-size: 1.25em;
 			border-bottom: 1px solid blue;
 		}
+
+	}
+
+	.socialIcons {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: nowrap;
+		gap: 0.5em;
 	}
 
 	.link {
