--- a/src/home/Home.module.css
+++ b/src/home/Home.module.css
@@ -2,13 +2,12 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	padding-inline: 4rem;
+	padding-inline: 2rem;
 	gap: 5px;
 	text-align: center;
 	margin-top: 0rem;
 	justify-content: space-around;
 	align-items: center;
-	/* flex-end */
 	box-shadow: 0 15px 15px 0 #e3e3e3;
 	min-height: 88dvh;
 }
